Comments progress - Restore scroll position when logging in. It felt bad to log in then have to scroll back to where you were. It's tricky because comments don't load immediately so we need to trigger comment loading, scroll to the sroll icon to it's obvious what is happening, wait for the load, then finish scrolling to the original position. This is further complicated by a few edge cases: the comment the user logged in from may no longer exist, it may be in a different position due to comments above it changing, the layout may shift as images load, and during all of this the user may try to manually scroll (and we don't want to cause a fight). So the "auto scroll" behavior is a long running process that tries to account for all of this. - Canceling or errors during a login attempt now redirects back to the site instead of leaving the user staring at a json response. - Removed extra margin at the bottom of comments. It looks bad on mobile and there's not a reliable way to detect mobile vs desktop.

--- a/assets/res/main.css
+++ b/assets/res/main.css
@@ -677,10 +677,6 @@ code, annotation {
 	width: 1em;
 }
 
-.comments-state-success {
-	margin-bottom: 80px;
-}
-
 .comment {
 	background-color: var(--background-2);
 	border-color: var(--outline);
